# dcc-mcp-zbrush

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  llms.txt  pyproject.toml  release-please-config.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release-please-divergence-gate.yml  release.yml  version-consistency.yml
bridge/plugin/: dcc_mcp_zbrush_plugin.py  mcp_socket_bridge.py
bridge/plugin/dcc_mcp_zbrush/: __init__.py
docs/: PRD.md  agent-docs.yaml  development.md
src/dcc_mcp_zbrush/: __init__.py  __version__.py  _env.py  _executor.py  _skill_host.py  _skill_loader.py  _version_probe.py  api.py  bridge.py  cli.py  server.py
src/dcc_mcp_zbrush/skills/: SKILLS_INDEX.md
src/dcc_mcp_zbrush/skills/zbrush-import-to-scene/: SKILL.md  tools.yaml
src/dcc_mcp_zbrush/skills/zbrush-import-to-scene/scripts/: import_to_scene.py
src/dcc_mcp_zbrush/skills/zbrush-interchange/: SKILL.md  tools.yaml
src/dcc_mcp_zbrush/skills/zbrush-interchange/scripts/: export_active_subtool_obj.py
src/dcc_mcp_zbrush/skills/zbrush-scene/: SKILL.md  tools.yaml
src/dcc_mcp_zbrush/skills/zbrush-scene/scripts/: get_scene_info.py  list_subtools.py
src/dcc_mcp_zbrush/skills/zbrush-scripting/: SKILL.md  tools.yaml
src/dcc_mcp_zbrush/skills/zbrush-scripting/scripts/: execute_python.py  get_session_info.py
src/dcc_mcp_zbrush/skills/zbrush-sculpt/: SKILL.md
src/dcc_mcp_zbrush/skills/zbrush-sculpt/scripts/: list_tools.py
src/dcc_mcp_zbrush/skills/zbrush-subtool/: SKILL.md  tools.yaml
src/dcc_mcp_zbrush/skills/zbrush-subtool/scripts/: get_subtool_status.py  refine_active_subtool.py  select_subtool.py
tests/: test_agent_instruction_files.py  test_import_to_scene.py  test_server.py  test_skills.py  test_smoke.py  test_socket_bridge_plugin.py
tools/: bootstrap_agent_install.py  lint_skills.py  pack_plugin.py  sync_agent_docs.py
