[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-zbrush"
version = "0.1.0"
description = "ZBrush adapter for the DCC Model Context Protocol (MCP) ecosystem — bridges MCP tools to ZBrush via HTTP REST API"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["zbrush", "pixologic", "mcp", "dcc", "ai", "llm", "model-context-protocol", "3d-sculpting"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "dcc-mcp-core>=0.12.14,<1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "respx>=0.20",
    "ruff>=0.8.0",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-zbrush"
Repository = "https://github.com/loonghao/dcc-mcp-zbrush"

[project.entry-points."dcc_mcp.adapters"]
zbrush = "dcc_mcp_zbrush:ZBrushMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_zbrush"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
